--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,66 @@
-.App {
-  text-align: center;
+.showhint {
+    border-bottom: 3px ridge;
+    margin-bottom: 2%;
 }
 
-.App-logo {
-  height: 40vmin;
+.idresolver_form {
+    margin-top: 2%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.idresolver_search {
+    vertical-align: text-bottom;
 }
 
-.App-link {
-  color: #09d3ac;
+#resolverInput {
+    width: 80%;
+}
+
+.inputlabel {
+    margin-right: 4.5%;
+}
+
+.search {
+    width: 100%;
+}
+
+.input {
+    width: 100%;
+}
+
+.row-header{
+    margin:0px auto;
+    padding:0px auto;
+}
+
+.row-content {
+    margin:0px auto;
+    padding: 50px 0px 50px 0px;
+    border-bottom: 1px ridge;
+    min-height:400px;
+}
+
+.footer{
+    background-color: #D1C4E9;
+    margin:0px auto;
+    padding: 20px 0px 20px 0px;
+}
+.jumbotron {
+    padding:70px 30px 70px 30px;
+    margin:0px auto;
+    background: #9575CD ;
+    color:floralwhite;
+}
+
+address{
+    font-size:80%;
+    margin:0px;
+    color:#0f0f0f;
+}
+
+.navbar-dark {
+    background-color: #512DA8;
+}
+
+.media-body {
+    margin-left: 5%;
 }
