--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,10 @@ address{
 
 .hidden { display:none; }
 
+.hidden1 {
+  display: none !important;
+}
+
 .node circle {
 	fill: rgb(247, 106, 214);
 	stroke: rgb(184, 37, 81);
@@ -174,13 +178,34 @@ path.link {
       position: relative;
       top: 15px;
   }
+
+  .addFilter {
+    float: right;
+    margin-top: -40px;
+    width: 100px;
+    font-size: 80%;
+  }
+
+  .error {
+    font-size: 1rem;
+    color: red;
+  }
+
+  .success {
+    font-size: 1rem;
+    color: green;
+  }
   
   .addInter {
     float: right;
-    right: 55px;
+    right: 156px;
     margin-top: -40px;
     width: 25%;
     font-size: 80%;
+  }
+
+  .dropdownOptions {
+    font-size: .75rem !important;
   }
   
   .addInterButton {
@@ -214,8 +239,8 @@ path.link {
   .removeBranch {
     float: right;
     position: relative;
-    bottom: 12px;
-    left: 65px;
+    bottom: 8px;
+    left: 3px;
   }
 
   .Branch1 {
@@ -240,6 +265,17 @@ path.link {
     padding: 5px;
     padding-bottom: 20px;
     border-radius: 5px;
+  }
+
+  .helpIcon {
+    float: right;
+    position: relative;
+    top: 25px;
+  }
+
+  .filterDiv {
+    position: relative;
+    left: 0px;
   }
   
   [data-id="layer0-selectbox"],[data-id="layer1-drag"],[data-id="layer2-node"] {
